--- a/Blueberry/app/src/main/res/layout/fragment_list.xml
+++ b/Blueberry/app/src/main/res/layout/fragment_list.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="top"
-    >
+    android:gravity="top">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,21 +17,29 @@
             android:text="추가"
             android:textAlignment="center" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_fragment_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+        >
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_gallery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="160dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|end"
         android:layout_marginRight="15sp"
+        android:layout_marginBottom="160dp"
         android:src="@drawable/icon_gallery"
         android:visibility="invisible"
         app:backgroundTint="#ffffff"
@@ -43,11 +50,11 @@
         android:id="@+id/fab_camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="90dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|end"
         android:layout_marginRight="15sp"
+        android:layout_marginBottom="90dp"
         android:src="@drawable/icon_camera"
         android:visibility="invisible"
         app:backgroundTint="#ffffff"
@@ -67,8 +74,7 @@
         android:backgroundTint="#ffffff"
         android:src="@drawable/icon_add_simple"
         app:backgroundTint="#ffffff"
-        app:borderWidth="0.5dp"
-        />
+        app:borderWidth="0.5dp" />
 
 </RelativeLayout>
 
