--- a/Blueberry/app/src/main/res/layout/fragment_group.xml
+++ b/Blueberry/app/src/main/res/layout/fragment_group.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     >
 
-    <GridView
+    <LinearLayout
         android:id="@+id/GroupGrid_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,18 +13,18 @@
         android:orientation="vertical"
         >
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="111111"/>
+<!--        <Button-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="111111"/>-->
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="111111"/>
+<!--        <Button-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="111111"/>-->
 
 
-    </GridView>
+    </LinearLayout>
 
 
 
