--- a/Blueberry/app/src/main/res/layout/activity_edit.xml
+++ b/Blueberry/app/src/main/res/layout/activity_edit.xml
@@ -97,6 +97,7 @@
             android:hint="이름을 선택한 후 수정하세요"
             android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
+            android:textCursorDrawable="@color/colorWhite"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -123,6 +124,7 @@
             android:hint="휴대전화 번호를 입력하고 수정하세요"
             android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
+            android:textCursorDrawable="@color/colorWhite"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -149,6 +151,7 @@
             android:hint="이메일을 입력하고 수정하세요"
             android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
+            android:textCursorDrawable="@color/colorWhite"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -175,6 +178,7 @@
             android:hint="홈페이지 주소를 입력하고 수정하세요"
             android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
+            android:textCursorDrawable="@color/colorWhite"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -201,6 +205,7 @@
             android:hint="회사 이름을 선택하고 수정하세요"
             android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
+            android:textCursorDrawable="@color/colorWhite"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -227,6 +232,7 @@
             android:hint="주소를 입력하고 수정하세요"
             android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
+            android:textCursorDrawable="@color/colorWhite"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -253,6 +259,7 @@
             android:hint="그룹을 지정하세요"
             android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
+            android:textCursorDrawable="@color/colorWhite"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
